# VideoObjectExtractor

./: CMakeLists.txt  README.md  prepare_camera.sh
src/: Common.cpp  Common.hpp  CudaMeanShift.cpp  CudaMeanShift.hpp  FastScanning.cpp  FastScanning.hpp  FrameGrabber.cpp  FrameGrabber.hpp  GaussianMixture.cpp  GaussianMixture.hpp  GrabCutExtracting.cpp  GrabCutExtracting.hpp  ImageProcessor.cpp  ImageProcessor.hpp  MorphologicalProcessing.cpp  MorphologicalProcessing.hpp  MovingObjectExtracting.cpp  MovingObjectExtracting.hpp  ObjectsDesignating.cpp  ObjectsDesignating.hpp  RegionSizeFiltering.cpp  RegionSizeFiltering.hpp  SigmaDeltaFiltering.cpp  SigmaDeltaFiltering.hpp  Utility.cpp  Utility.hpp  Visualizer.cpp  Visualizer.hpp  main.cpp
